# multi-agent-dynamo-llm-orchestrator

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: settings.dev.yaml  settings.prod.yaml  settings.yaml
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.vllm  docker-compose.prod.yml  docker-compose.yml
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  getting-started.md
examples/: basic_agent.py  full_system_demo.py
kubernetes/: api-gateway.yaml  configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
src/: __init__.py  config.py  logging_config.py
src/agents/: agent_registry.py  base.py  execution_agent.py  models.py  planning_agent.py  research_agent.py  validation_agent.py
src/agents/prompts/: planning.py  research.py
src/agents/tools/: base_tool.py  calculation.py  registry.py  search.py
src/api/: app.py  dependencies.py  middleware.py  routes.py  schemas.py
src/inference/: cache.py  dynamo_optimizer.py  vllm_engine.py
src/integrations/: base_integration.py  google_search.py
src/monitoring/: health.py  metrics.py
src/orchestration/: executor.py  models.py  orchestrator.py  scheduler.py
src/storage/: models.py  postgres_client.py  redis_client.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_agents.py  test_inference.py  test_orchestrator.py  test_storage.py
