[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent-inference-stack"
version = "0.1.0"
description = "Multi-agent AI system with Dynamo token batching, vLLM inference, and Kubernetes orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "agent-inference-stack", email = "dev@agent-inference-stack.ai"}]
keywords = ["ai", "multi-agent", "llm", "vllm", "dynamo", "kubernetes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
